feat(#189): remove instance number on doNames for pDO in ExtRef while comparing with DO in DataTypeTemplate
Signed-off-by: Aliou DIAITE <aliou.diaite@rte-france.com>